[gd_scene load_steps=10 format=3 uid="uid://7kjlhs507dvi"]

[ext_resource type="Script" path="res://Actors/Projectile/trident.gd" id="1_cghhy"]

[sub_resource type="CanvasTexture" id="CanvasTexture_vpic3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rhwn7"]
size = Vector2(15, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6gat6"]
size = Vector2(65, 10)

[sub_resource type="Animation" id="Animation_m15pe"]
length = 0.001

[sub_resource type="Animation" id="Animation_qawt2"]
resource_name = "fired"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.000677601, 0.0333333, 0.0340109, 0.0666667, 0.0673443, 0.1, 0.100678, 0.133333, 0.134011, 0.166667, 0.167344, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.763659, 0.796993, 0.830326, 0.863659, 0.896993, 0.930326, 0.962197, 0.992689),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-2, 1), Vector2(-2, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, -1), Vector2(1, -1), Vector2(-2, -1), Vector2(-2, -1), Vector2(-2, 1), Vector2(-2, 1), Vector2(-1, -1), Vector2(-1, -1), Vector2(-2, 1), Vector2(1, 1), Vector2(1, -1), Vector2(-2, -1), Vector2(-2, 1), Vector2(-1, -1), Vector2(3, 0), Vector2(1, 0), Vector2(-2, 1), Vector2(0, 1), Vector2(-1, -1), Vector2(1, 1), Vector2(0, 0), Vector2(1, -1), Vector2(-2, 0), Vector2(1, 2), Vector2(1, -1), Vector2(-2, 1), Vector2(1, 1), Vector2(1, -1), Vector2(-2, -1), Vector2(-2, 1), Vector2(-1, -1), Vector2(1, -1), Vector2(1, -1)]
}

[sub_resource type="Animation" id="Animation_74irj"]
resource_name = "trident_shake"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0020328, 0.0353661, 0.0686995, 0.102033, 0.135366, 0.168699, 0.202033, 0.235366, 0.268699, 0.290692, 0.324025, 0.357359, 0.390692, 0.419437, 0.45277, 0.486103, 0.519437, 0.55277, 0.586103, 0.619437, 0.645756, 0.67909, 0.715716, 0.749049, 0.782382, 0.815716, 0.849049, 0.882382, 0.915716, 0.949049, 0.982382, 1.01662, 1.04995, 1.08329, 1.11662, 1.14995, 1.18329, 1.21662, 1.24995, 1.28329, 1.30528, 1.33861, 1.37195, 1.40528, 1.43402, 1.46736, 1.50069, 1.53402, 1.56736, 1.60069, 1.63402, 1.66034, 1.69368, 1.7303, 1.76364, 1.79697, 1.8303, 1.86364, 1.89697, 1.9303, 1.96364, 1.99697),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, -1), Vector2(-2, 2), Vector2(-1, -1), Vector2(1, 1), Vector2(1, -1), Vector2(-1, 2), Vector2(-3, -1), Vector2(4, 0), Vector2(0, 0), Vector2(-1, -1), Vector2(1, 1), Vector2(1, -1), Vector2(-1, 2), Vector2(-1, -1), Vector2(1, 1), Vector2(1, -1), Vector2(-1, 2), Vector2(-3, -1), Vector2(4, 0), Vector2(0, 0), Vector2(-1, -1), Vector2(1, 1), Vector2(1, -1), Vector2(-2, 2), Vector2(-1, -1), Vector2(1, 1), Vector2(1, -1), Vector2(-1, 2), Vector2(-3, -1), Vector2(4, 0), Vector2(0, 0), Vector2(1, -1), Vector2(-2, 2), Vector2(-1, -1), Vector2(1, 1), Vector2(1, -1), Vector2(-1, 2), Vector2(-3, -1), Vector2(4, 0), Vector2(0, 0), Vector2(-1, -1), Vector2(1, 1), Vector2(1, -1), Vector2(-1, 2), Vector2(-1, -1), Vector2(1, 1), Vector2(1, -1), Vector2(-1, 2), Vector2(-3, -1), Vector2(4, 0), Vector2(0, 0), Vector2(-1, -1), Vector2(1, 1), Vector2(1, -1), Vector2(-2, 2), Vector2(-1, -1), Vector2(1, 1), Vector2(1, -1), Vector2(-1, 2), Vector2(-3, -1), Vector2(4, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2onyd"]
_data = {
"RESET": SubResource("Animation_m15pe"),
"fired": SubResource("Animation_qawt2"),
"trident_shake": SubResource("Animation_74irj")
}

[sub_resource type="Gradient" id="Gradient_8c0ac"]
colors = PackedColorArray(1, 0.0705882, 0, 1, 0.956863, 0.803922, 0, 1)

[node name="tridentBody" type="CharacterBody2D"]
script = ExtResource("1_cghhy")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(80, 3)
texture = SubResource("CanvasTexture_vpic3")

[node name="frontCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(32.5, 0)
shape = SubResource("RectangleShape2D_rhwn7")
one_way_collision = true

[node name="pickupArea" type="Area2D" parent="."]
visible = false

[node name="backCollision" type="CollisionShape2D" parent="pickupArea"]
visible = false
position = Vector2(-7.5, 0)
shape = SubResource("RectangleShape2D_6gat6")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2onyd")
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(-39, 0)
rotation = 3.14159
amount = 100
lifetime = 1.2
explosiveness = 0.15
randomness = 0.4
spread = 60.0
gravity = Vector2(0, 0)
initial_velocity_max = 80.81
scale_amount_max = 5.0
color_ramp = SubResource("Gradient_8c0ac")
hue_variation_min = -1.0
hue_variation_max = 1.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
